# TestOOP

untitled30/: CMakeLists.txt  main.cpp
untitled30/data/: data.txt
untitled30/domain/: domain.cpp  domain.h
untitled30/repository/: repository.cpp  repository.h
untitled30/service/: service.cpp  service.h
untitled30/ui/: ui.cpp  ui.h
